# local-agent-mcp-servers

./: Cargo.toml  ISSUE_EXTRACT_CODE_MODE.md  justfile
.github/workflows/: release.yml
browser-server/: Cargo.toml
browser-server/src/: main.rs
browser-server/wix/: main.wxs
config-server/: Cargo.toml
config-server/src/: main.rs
mcp-browser-core/: Cargo.toml
mcp-browser-core/src/: browser.rs  check.rs  code_mode.rs  lib.rs  profile.rs  resources.rs
mcp-browser-core/src/tools/: click.rs  evaluate_script.rs  extract_table.rs  fill.rs  get_text.rs  handle_dialog.rs  hover.rs  list_pages.rs  mod.rs  navigate.rs  press_key.rs  screenshot.rs  select_page.rs  wait.rs
mcp-browser-core/tests/: code_mode_amplify.rs  code_mode_browser.rs  test_helpers.rs  test_server.rs
mcp-browser-core/tests/pages/: dynamic.html  form.html  simple.html  table.html
mcp-config-core/: Cargo.toml
mcp-config-core/src/: lib.rs  manager.rs
mcp-config-core/src/tools/: add_mcp_server.rs  get_channel.rs  get_provider.rs  get_secret.rs  get_section.rs  list_channels.rs  list_mcp_servers.rs  list_sections.rs  mod.rs  reload_config.rs  remove_channel.rs  remove_mcp_server.rs  set_channel.rs  set_provider.rs  set_secret.rs  set_section.rs
server-common/: Cargo.toml
server-common/src/: lib.rs
