[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[workspace]
members = ["server-common", "mcp-browser-core", "browser-server"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
axum = "0.7"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
futures = "0.3"
serde_json = "1"
thiserror = "1"
tracing = "0.1"

[workspace.dependencies.chromiumoxide]
version = "0.8"
default-features = false
features = ["tokio-runtime"]

[workspace.dependencies.pmcp]
version = "1.10"
features = ["streamable-http", "schema-generation"]

[workspace.dependencies.schemars]
version = "1.0"
features = ["preserve_order"]

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1"
features = ["full"]

[workspace.dependencies.tower-http]
version = "0.6"
features = ["trace", "cors"]

[workspace.dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[workspace.dependencies.validator]
version = "0.18"
features = ["derive"]
