[package]
name = "browser-server"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "MCP server for headless browser automation via Chrome DevTools Protocol"
repository = "https://github.com/theonlyhennygod/mcp-servers"
keywords = ["mcp", "browser", "automation", "chrome", "headless"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "browser-server"
path = "src/main.rs"

[dependencies]
mcp-browser-core = { path = "../mcp-browser-core" }
server-common = { path = "../server-common" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
