[package]
name = "mcp-browser-core"
version.workspace = true
edition.workspace = true

[dependencies]
pmcp = { workspace = true }
chromiumoxide = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
validator = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
futures = { workspace = true }
pmcp-code-mode = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
